changed title to My ThinkBlog

--- a/book.toml
+++ b/book.toml
@@ -1,5 +1,5 @@
 [book]
-title = "My mdBook Blog"
+title = "My ThinkBlog"
 description = "A clean, fast blog built with mdBook"
 language = "en"
 multilingual = false
